# NLP_LegalQA_public

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
data_sample/parsed/: sample_traffic_law.json
docs/: evaluation.md
scripts/: eval_basic_rag.py  eval_basic_reranker.py  eval_pipeline.py  import_sample_data.py  init_neo4j.py
src/legal_scraper/: __init__.py  api.py  cli.py  client.py  demo.py  embedder.py  generator.py  models.py  neo4j_importer.py  parser.py  prompts.py  query_parser.py  query_rewriter.py  reranker.py  retrieval.py  router.py  scraper.py  text2cypher.py
streamlit_ui/: app.py  requirements.txt
streamlit_ui/.streamlit/: config.toml
tests/: test_decompose.py  test_embedder.py  test_graph_enhanced.py  test_hierarchy_fetch.py  test_neo4j_importer.py  test_reranker.py
tests/integration/: test_sample_neo4j.py
tests/unit/: test_demo_api.py  test_retrieval.py
