[project]
name = "nlp-legalqa"
version = "0.1.0"
description = "Vietnamese legal document scraper and Graph RAG QA toolkit"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "requests>=2.32.5",
    "neo4j>=5.28.0",
    "langchain-huggingface>=1.2.1",
    "langchain-neo4j>=0.8.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=0.3.0",
    "sentence-transformers>=5.3.0",
    "pyvi>=0.1.1",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]
ui = [
    "streamlit>=1.35.0",
]
eval = [
    "evaluate>=0.4.1",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "nltk>=3.8.1",
]

[project.scripts]
legal-scraper = "legal_scraper.cli:main"
legal-api = "legal_scraper.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/legal_scraper"]

[tool.pytest.ini_options]
addopts = ["-m", "not integration"]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: tests that require Neo4j, model downloads, API keys, or other external services",
]
